--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "[4920 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "        13]], dtype=object)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,33 +533,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
-    "classifier = LogisticRegression().fit(X, Y)"
+    "# Algorithm to produce random training/test splits on learning data\n",
+    "from random import shuffle\n",
+    "shuffle(learning_data)\n",
+    "Xtrain = list(learning_data[:3000, 0])\n",
+    "Ytrain = list(learning_data[:3000, 1])\n",
+    "Xtest = list(learning_data[3000:, 0])\n",
+    "Ytest = list(learning_data[3000:, 1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "logistic_classifier = LogisticRegression().fit(Xtrain, Ytrain)\n",
+    "decisiontree_classifier = DecisionTreeClassifier().fit(Xtrain, Ytrain)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'Paralysis (brain hemorrhage)'"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error rate: 0.0003333333333332966      \n",
+      "Validation error rate: 0.011458333333333348\n"
+     ]
     }
    ],
    "source": [
-    "unique_int_to_illness[classifier.predict([X[0]])[0]]"
+    "from sklearn.metrics import zero_one_loss\n",
+    "print(f\"Training error rate: {zero_one_loss(Ytrain, logistic_classifier.predict(Xtrain))}\\\n",
+    "      \\nValidation error rate: {zero_one_loss(Ytest, logistic_classifier.predict(Xtest))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error rate: 0.0      \n",
+      "Validation error rate: 0.013541666666666674\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Training error rate: {zero_one_loss(Ytrain, decisiontree_classifier.predict(Xtrain))}\\\n",
+    "      \\nValidation error rate: {zero_one_loss(Ytest, decisiontree_classifier.predict(Xtest))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "randomforest_classifier = RandomForestClassifier().fit(Xtrain, Ytrain)\n",
+    "print(f\"Training error rate: {zero_one_loss(Ytrain, randomforest_classifier.predict(Xtrain))}\\\n",
+    "      \\nValidation error rate: {zero_one_loss(Ytest, randomforest_classifier.predict(Xtest))}\")"
    ]
   }
  ],
