added healthy as an option

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        " 'yellowish_skin'}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 368,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        " 'spinning_movements': 130}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 369,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
@@ -365,27 +365,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>Fungal infection</td>\n",
+       "      <td>Healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>Fungal infection</td>\n",
+       "      <td>Healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>Fungal infection</td>\n",
+       "      <td>Healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>Fungal infection</td>\n",
+       "      <td>Healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
-       "      <td>Fungal infection</td>\n",
+       "      <td>Healthy</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -393,33 +393,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4915</th>\n",
+       "      <th>4923</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>(vertigo) Paroymsal  Positional Vertigo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4916</th>\n",
+       "      <th>4924</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Acne</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4917</th>\n",
+       "      <th>4925</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Urinary tract infection</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4918</th>\n",
+       "      <th>4926</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Psoriasis</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4919</th>\n",
+       "      <th>4927</th>\n",
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>Impetigo</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4920 rows × 2 columns</p>\n",
+       "<p>4928 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -430,29 +430,29 @@
        "3     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "4     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "...                                                 ...   \n",
-       "4915  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4916  [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4917  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4918  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
-       "4919  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4923  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4924  [0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4925  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4926  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
+       "4927  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
        "\n",
        "                                            1  \n",
-       "0                            Fungal infection  \n",
-       "1                            Fungal infection  \n",
-       "2                            Fungal infection  \n",
-       "3                            Fungal infection  \n",
-       "4                            Fungal infection  \n",
+       "0                                     Healthy  \n",
+       "1                                     Healthy  \n",
+       "2                                     Healthy  \n",
+       "3                                     Healthy  \n",
+       "4                                     Healthy  \n",
        "...                                       ...  \n",
-       "4915  (vertigo) Paroymsal  Positional Vertigo  \n",
-       "4916                                     Acne  \n",
-       "4917                  Urinary tract infection  \n",
-       "4918                                Psoriasis  \n",
-       "4919                                 Impetigo  \n",
+       "4923  (vertigo) Paroymsal  Positional Vertigo  \n",
+       "4924                                     Acne  \n",
+       "4925                  Urinary tract infection  \n",
+       "4926                                Psoriasis  \n",
+       "4927                                 Impetigo  \n",
        "\n",
-       "[4920 rows x 2 columns]"
+       "[4928 rows x 2 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 371,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,28 +484,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 372,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        27],\n",
-       "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        27],\n",
-       "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        27],\n",
+       "array([[list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       "        0],\n",
+       "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       "        0],\n",
+       "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
+       "        0],\n",
        "       ...,\n",
        "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        21],\n",
+       "        22],\n",
        "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        4],\n",
+       "        5],\n",
        "       [list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "        13]], dtype=object)"
+       "        14]], dtype=object)"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 372,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
    "source": [
     "learning_data = df.to_numpy()\n",
     "\n",
-    "unique_int_to_illness = {k: v for k, v in enumerate(symptom_desc.to_numpy()[:, 0])}\n",
+    "unique_int_to_illness = {k: v for k, v in enumerate(symptom_desc.keys())}\n",
     "illness_to_unique_int = {v: k for k, v in unique_int_to_illness.items()}\n",
     "map_values = np.vectorize(lambda x : illness_to_unique_int[x])\n",
     "\n",
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,51 +548,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Or use all of data for training\n",
-    "Xtrain = X\n",
-    "Ytrain = Y"
+    "# Xtrain = X\n",
+    "# Ytrain = Y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 394,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training error rate: 0.0      \n",
+      "Validation error rate: 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import zero_one_loss\n",
     "\n",
     "logistic_classifier = LogisticRegression().fit(Xtrain, Ytrain)\n",
-    "decisiontree_classifier = DecisionTreeClassifier().fit(Xtrain, Ytrain)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training error rate: 0.0      \n",
-      "Validation error rate: 0.004687499999999956\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import zero_one_loss\n",
     "print(f\"Training error rate: {zero_one_loss(Ytrain, logistic_classifier.predict(Xtrain))}\\\n",
-    "      \\nValidation error rate: {zero_one_loss(Ytest, logistic_classifier.predict(Xtest))}\")"
+    "      \\nValidation error rate: {zero_one_loss(Ytest, logistic_classifier.predict(Xtest))}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -600,18 +590,20 @@
      "output_type": "stream",
      "text": [
       "Training error rate: 0.0      \n",
-      "Validation error rate: 0.004166666666666652\n"
+      "Validation error rate: 0.0005186721991701226\n"
      ]
     }
    ],
    "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "decisiontree_classifier = DecisionTreeClassifier().fit(Xtrain, Ytrain)\n",
     "print(f\"Training error rate: {zero_one_loss(Ytrain, decisiontree_classifier.predict(Xtrain))}\\\n",
     "      \\nValidation error rate: {zero_one_loss(Ytest, decisiontree_classifier.predict(Xtest))}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 396,
    "metadata": {},
    "outputs": [
     {
@@ -633,13 +625,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd61a1c5e37446b589d17ad898607879",
+       "model_id": "bf8bb0d533174f92ab3efb661e85f0ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -695,38 +687,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: Fungal infection\n",
-      "In humans, fungal infections occur when an invading fungus takes over an area of the body and is too much for the immune system to handle. Fungi can live in the air, soil, water, and plants. There are also some fungi that live naturally in the human body. Like many microbes, there are helpful fungi and harmful fungi.\n",
+      "LogisticRegression: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- bath twice\n",
-      "\t- use detol or neem in bathing water\n",
-      "\t- keep infected area dry\n",
-      "\t- use clean cloths\n",
+      "\t- No action needed\n",
       "\n",
       "\n",
-      "DecisionTreeClassifier: Fungal infection\n",
-      "In humans, fungal infections occur when an invading fungus takes over an area of the body and is too much for the immune system to handle. Fungi can live in the air, soil, water, and plants. There are also some fungi that live naturally in the human body. Like many microbes, there are helpful fungi and harmful fungi.\n",
+      "DecisionTreeClassifier: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- bath twice\n",
-      "\t- use detol or neem in bathing water\n",
-      "\t- keep infected area dry\n",
-      "\t- use clean cloths\n",
+      "\t- No action needed\n",
       "\n",
       "\n",
-      "RandomForestClassifier: Fungal infection\n",
-      "In humans, fungal infections occur when an invading fungus takes over an area of the body and is too much for the immune system to handle. Fungi can live in the air, soil, water, and plants. There are also some fungi that live naturally in the human body. Like many microbes, there are helpful fungi and harmful fungi.\n",
+      "RandomForestClassifier: Healthy\n",
+      "No illness detected\n",
       "Precautions to take:\n",
-      "\t- bath twice\n",
-      "\t- use detol or neem in bathing water\n",
-      "\t- keep infected area dry\n",
-      "\t- use clean cloths\n",
+      "\t- No action needed\n",
       "\n",
       "\n"
      ]
