fixed whitespace key errors and added multi-model avg error rates

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 467,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,14 +10,14 @@
     "import numpy as np\n",
     "import os\n",
     "\n",
-    "symptom_precaution = {row[0]: row[1:] for row in pd.read_csv(os.path.join(\"datasets\", \"disease symptom prediction\", \"symptom_precaution.csv\")).to_numpy()}\n",
-    "symptom_desc = {row[0]: row[1] for row in pd.read_csv(os.path.join(\"datasets\", \"disease symptom prediction\", \"symptom_Description.csv\")).to_numpy()}\n",
+    "symptom_precaution = {row[0].strip(): row[1:] for row in pd.read_csv(os.path.join(\"datasets\", \"disease symptom prediction\", \"symptom_precaution.csv\")).to_numpy()}\n",
+    "symptom_desc = {row[0].strip(): row[1] for row in pd.read_csv(os.path.join(\"datasets\", \"disease symptom prediction\", \"symptom_Description.csv\")).to_numpy()}\n",
     "symptoms = pd.read_csv(os.path.join(\"datasets\", \"disease symptom prediction\", \"Symptom-severity.csv\")).to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 412,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
        " 'yellowish_skin'}"
       ]
      },
-     "execution_count": 368,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        " 'spinning_movements': 130}"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 414,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "[4928 rows x 2 columns]"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 414,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 415,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
        "        14]], dtype=object)"
       ]
      },
-     "execution_count": 372,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 417,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,22 +533,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Algorithm to produce random training/test splits on learning data\n",
-    "from random import shuffle\n",
-    "shuffle(learning_data)\n",
-    "Xtrain = list(learning_data[:3000, 0])\n",
-    "Ytrain = list(learning_data[:3000, 1])\n",
-    "Xtest = list(learning_data[3000:, 0])\n",
-    "Ytest = list(learning_data[3000:, 1])"
+    "from sklearn.model_selection import train_test_split\n",
+    "Xtrain, Xtest, Ytrain, Ytest = train_test_split(X, Y, test_size=0.33)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 419,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 453,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 395,
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +585,7 @@
      "output_type": "stream",
      "text": [
       "Training error rate: 0.0      \n",
-      "Validation error rate: 0.0005186721991701226\n"
+      "Validation error rate: 0.003687768899815591\n"
      ]
     }
    ],
@@ -603,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 396,
+   "execution_count": 455,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +620,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 397,
+   "execution_count": 456,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "LogReg Training Error: 0.0\n",
+      "LogReg Testing Error: 6.146281499692651e-07\n",
+      "\n",
+      "\n",
+      "DecTree Training Error: 0.0\n",
+      "DecTree Testing Error: 0.0\n",
+      "\n",
+      "\n",
+      "RanFor Training Error: 0.0\n",
+      "RanFor Testing Error: 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate n models and take the average of their error\n",
+    "sum_logreg_train = 0\n",
+    "sum_dectree_train = 0\n",
+    "sum_ranfor_train = 0\n",
+    "sum_logreg_test = 0\n",
+    "sum_dectree_test = 0\n",
+    "sum_ranfor_test = 0\n",
+    "\n",
+    "n = 10\n",
+    "\n",
+    "for _ in range(n):\n",
+    "    print(_)\n",
+    "    Xtrain, Xtest, Ytrain, Ytest = train_test_split(X, Y, test_size=0.33)\n",
+    "\n",
+    "    logistic_classifier = LogisticRegression().fit(Xtrain, Ytrain)\n",
+    "    sum_logreg_train += zero_one_loss(Ytrain, logistic_classifier.predict(Xtrain))\n",
+    "    sum_logreg_test += zero_one_loss(Ytest, decisiontree_classifier.predict(Xtest))\n",
+    "\n",
+    "    decisiontree_classifier = DecisionTreeClassifier().fit(Xtrain, Ytrain)\n",
+    "    sum_dectree_train += zero_one_loss(Ytrain, decisiontree_classifier.predict(Xtrain))\n",
+    "    sum_dectree_test += zero_one_loss(Ytest, decisiontree_classifier.predict(Xtest))\n",
+    "\n",
+    "    randomforest_classifier = RandomForestClassifier().fit(Xtrain, Ytrain)\n",
+    "    sum_ranfor_train += zero_one_loss(Ytrain, randomforest_classifier.predict(Xtrain))\n",
+    "    sum_ranfor_test += zero_one_loss(Ytest, randomforest_classifier.predict(Xtest))\n",
+    "\n",
+    "print(f\"LogReg Training Error: {sum_logreg_train / 1000}\\nLogReg Testing Error: {sum_logreg_test / 1000}\\n\\n\")\n",
+    "print(f\"DecTree Training Error: {sum_dectree_train / 1000}\\nDecTree Testing Error: {sum_dectree_test / 1000}\\n\\n\")\n",
+    "print(f\"RanFor Training Error: {sum_ranfor_train / 1000}\\nRanFor Testing Error: {sum_ranfor_test / 1000}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -687,29 +746,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 468,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression: Healthy\n",
-      "No illness detected\n",
+      "LogisticRegression: Diabetes\n",
+      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
       "Precautions to take:\n",
-      "\t- No action needed\n",
+      "\t- have balanced diet\n",
+      "\t- exercise\n",
+      "\t- consult doctor\n",
+      "\t- follow up\n",
       "\n",
       "\n",
-      "DecisionTreeClassifier: Healthy\n",
-      "No illness detected\n",
+      "DecisionTreeClassifier: Diabetes\n",
+      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
       "Precautions to take:\n",
-      "\t- No action needed\n",
+      "\t- have balanced diet\n",
+      "\t- exercise\n",
+      "\t- consult doctor\n",
+      "\t- follow up\n",
       "\n",
       "\n",
-      "RandomForestClassifier: Healthy\n",
-      "No illness detected\n",
+      "RandomForestClassifier: Diabetes\n",
+      "Diabetes is a disease that occurs when your blood glucose, also called blood sugar, is too high. Blood glucose is your main source of energy and comes from the food you eat. Insulin, a hormone made by the pancreas, helps glucose from food get into your cells to be used for energy.\n",
       "Precautions to take:\n",
-      "\t- No action needed\n",
+      "\t- have balanced diet\n",
+      "\t- exercise\n",
+      "\t- consult doctor\n",
+      "\t- follow up\n",
       "\n",
       "\n"
      ]
@@ -726,6 +794,109 @@
     "        if prec == prec:\n",
     "            print(f\"\\t- {prec}\")\n",
     "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Healthy': array(['No action needed', nan, nan, nan], dtype=object),\n",
+       " 'Drug Reaction': array(['stop irritation', 'consult nearest hospital', 'stop taking drug',\n",
+       "        'follow up'], dtype=object),\n",
+       " 'Malaria': array(['Consult nearest hospital', 'avoid oily food',\n",
+       "        'avoid non veg food', 'keep mosquitos out'], dtype=object),\n",
+       " 'Allergy': array(['apply calamine', 'cover area with bandage', nan,\n",
+       "        'use ice to compress itching'], dtype=object),\n",
+       " 'Hypothyroidism': array(['reduce stress', 'exercise', 'eat healthy', 'get proper sleep'],\n",
+       "       dtype=object),\n",
+       " 'Psoriasis': array(['wash hands with warm soapy water', 'stop bleeding using pressure',\n",
+       "        'consult doctor', 'salt baths'], dtype=object),\n",
+       " 'GERD': array(['avoid fatty spicy food', 'avoid lying down after eating',\n",
+       "        'maintain healthy weight', 'exercise'], dtype=object),\n",
+       " 'Chronic cholestasis': array(['cold baths', 'anti itch medicine', 'consult doctor',\n",
+       "        'eat healthy'], dtype=object),\n",
+       " 'hepatitis A': array(['Consult nearest hospital', 'wash hands through',\n",
+       "        'avoid fatty spicy food', 'medication'], dtype=object),\n",
+       " 'Osteoarthristis': array(['acetaminophen', 'consult nearest hospital', 'follow up',\n",
+       "        'salt baths'], dtype=object),\n",
+       " '(vertigo) Paroymsal  Positional Vertigo': array(['lie down', 'avoid sudden change in body',\n",
+       "        'avoid abrupt head movment', 'relax'], dtype=object),\n",
+       " 'Hypoglycemia': array(['lie down on side', 'check in pulse', 'drink sugary drinks',\n",
+       "        'consult doctor'], dtype=object),\n",
+       " 'Acne': array(['bath twice', 'avoid fatty spicy food', 'drink plenty of water',\n",
+       "        'avoid too many products'], dtype=object),\n",
+       " 'Diabetes ': array(['have balanced diet', 'exercise', 'consult doctor', 'follow up'],\n",
+       "       dtype=object),\n",
+       " 'Impetigo': array(['soak affected area in warm water', 'use antibiotics',\n",
+       "        'remove scabs with wet compressed cloth', 'consult doctor'],\n",
+       "       dtype=object),\n",
+       " 'Hypertension ': array(['meditation', 'salt baths', 'reduce stress', 'get proper sleep'],\n",
+       "       dtype=object),\n",
+       " 'Peptic ulcer diseae': array(['avoid fatty spicy food', 'consume probiotic food',\n",
+       "        'eliminate milk', 'limit alcohol'], dtype=object),\n",
+       " 'Dimorphic hemorrhoids(piles)': array(['avoid fatty spicy food', 'consume witch hazel',\n",
+       "        'warm bath with epsom salt', 'consume alovera juice'], dtype=object),\n",
+       " 'Common Cold': array(['drink vitamin c rich drinks', 'take vapour', 'avoid cold food',\n",
+       "        'keep fever in check'], dtype=object),\n",
+       " 'Chicken pox': array(['use neem in bathing ', 'consume neem leaves', 'take vaccine',\n",
+       "        'avoid public places'], dtype=object),\n",
+       " 'Cervical spondylosis': array(['use heating pad or cold pack', 'exercise',\n",
+       "        'take otc pain reliver', 'consult doctor'], dtype=object),\n",
+       " 'Hyperthyroidism': array(['eat healthy', 'massage', 'use lemon balm',\n",
+       "        'take radioactive iodine treatment'], dtype=object),\n",
+       " 'Urinary tract infection': array(['drink plenty of water', 'increase vitamin c intake',\n",
+       "        'drink cranberry juice', 'take probiotics'], dtype=object),\n",
+       " 'Varicose veins': array(['lie down flat and raise the leg high', 'use oinments',\n",
+       "        'use vein compression', 'dont stand still for long'], dtype=object),\n",
+       " 'AIDS': array(['avoid open cuts', 'wear ppe if possible', 'consult doctor',\n",
+       "        'follow up'], dtype=object),\n",
+       " 'Paralysis (brain hemorrhage)': array(['massage', 'eat healthy', 'exercise', 'consult doctor'],\n",
+       "       dtype=object),\n",
+       " 'Typhoid': array(['eat high calorie vegitables', 'antiboitic therapy',\n",
+       "        'consult doctor', 'medication'], dtype=object),\n",
+       " 'Hepatitis B': array(['consult nearest hospital', 'vaccination', 'eat healthy',\n",
+       "        'medication'], dtype=object),\n",
+       " 'Fungal infection': array(['bath twice', 'use detol or neem in bathing water',\n",
+       "        'keep infected area dry', 'use clean cloths'], dtype=object),\n",
+       " 'Hepatitis C': array(['Consult nearest hospital', 'vaccination', 'eat healthy',\n",
+       "        'medication'], dtype=object),\n",
+       " 'Migraine': array(['meditation', 'reduce stress', 'use poloroid glasses in sun',\n",
+       "        'consult doctor'], dtype=object),\n",
+       " 'Bronchial Asthma': array(['switch to loose cloothing', 'take deep breaths',\n",
+       "        'get away from trigger', 'seek help'], dtype=object),\n",
+       " 'Alcoholic hepatitis': array(['stop alcohol consumption', 'consult doctor', 'medication',\n",
+       "        'follow up'], dtype=object),\n",
+       " 'Jaundice': array(['drink plenty of water', 'consume milk thistle',\n",
+       "        'eat fruits and high fiberous food', 'medication'], dtype=object),\n",
+       " 'Hepatitis E': array(['stop alcohol consumption', 'rest', 'consult doctor', 'medication'],\n",
+       "       dtype=object),\n",
+       " 'Dengue': array(['drink papaya leaf juice', 'avoid fatty spicy food',\n",
+       "        'keep mosquitos away', 'keep hydrated'], dtype=object),\n",
+       " 'Hepatitis D': array(['consult doctor', 'medication', 'eat healthy', 'follow up'],\n",
+       "       dtype=object),\n",
+       " 'Heart attack': array(['call ambulance', 'chew or swallow asprin', 'keep calm', nan],\n",
+       "       dtype=object),\n",
+       " 'Pneumonia': array(['consult doctor', 'medication', 'rest', 'follow up'], dtype=object),\n",
+       " 'Arthritis': array(['exercise', 'use hot and cold therapy', 'try acupuncture',\n",
+       "        'massage'], dtype=object),\n",
+       " 'Gastroenteritis': array(['stop eating solid food for while',\n",
+       "        'try taking small sips of water', 'rest', 'ease back into eating'],\n",
+       "       dtype=object),\n",
+       " 'Tuberculosis': array(['cover mouth', 'consult doctor', 'medication', 'rest'],\n",
+       "       dtype=object)}"
+      ]
+     },
+     "execution_count": 466,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "symptom_precaution"
    ]
   }
  ],
