added pickle and models

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [
     {
@@ -331,16 +331,16 @@
       "Performing iteration 7\n",
       "Performing iteration 8\n",
       "Performing iteration 9\n",
-      "LogReg Training Error: 0.0\n",
-      "LogReg Testing Error: 4.917025199754121e-06\n",
+      "LogReg Training Error: 6.058770069675701e-07\n",
+      "LogReg Testing Error: 1.2292562999385303e-06\n",
       "\n",
       "\n",
       "DecTree Training Error: 0.0\n",
-      "DecTree Testing Error: 1.1063306699446773e-05\n",
+      "DecTree Testing Error: 3.687768899815591e-06\n",
       "\n",
       "\n",
       "RanFor Training Error: 0.0\n",
-      "RanFor Testing Error: 3.687768899815591e-06\n"
+      "RanFor Testing Error: 0.0\n"
      ]
     }
    ],
@@ -488,6 +488,54 @@
     "        if prec == prec:\n",
     "            print(f\"\\t- {prec}\")\n",
     "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store model in pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(os.path.join(\"models\", \"random_forest_model.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(randomforest_classifier, file)\n",
+    "\n",
+    "with open(os.path.join(\"models\", \"decision_tree_model.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(decisiontree_classifier, file)\n",
+    "\n",
+    "with open(os.path.join(\"models\", \"logistic_regression_model.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(logistic_classifier, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"random_forest_model.pkl\"), \"rb\") as file:\n",
+    "    randomforest_classifier = pickle.load(file)\n",
+    "\n",
+    "with open(os.path.join(\"models\", \"decision_tree_model.pkl\"), \"rb\") as file:\n",
+    "    decisiontree_classifier = pickle.load(file)\n",
+    "\n",
+    "with open(os.path.join(\"models\", \"logistic_regression_model.pkl\"), \"rb\") as file:\n",
+    "    logistic_classifier = pickle.load(file)"
    ]
   }
  ],
