saved some models and wrote a primitive endpoint

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 480,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 479,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,6 +536,23 @@
     "\n",
     "with open(os.path.join(\"models\", \"logistic_regression_model.pkl\"), \"rb\") as file:\n",
     "    logistic_classifier = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Store other data structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"symptoms.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(list(indexer.keys()), file)"
    ]
   }
  ],
