added getters to api

--- a/disease_symptom_prediction_dataset.ipynb
+++ b/disease_symptom_prediction_dataset.ipynb
@@ -547,12 +547,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(os.path.join(\"models\", \"symptoms.pkl\"), \"wb+\") as file:\n",
     "    pickle.dump(list(indexer.keys()), file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 486,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"illness_descriptions.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(symptom_desc, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 485,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"convert_id_to_illness.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(unique_int_to_illness, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 487,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"models\", \"illness_precautions.pkl\"), \"wb+\") as file:\n",
+    "    pickle.dump(symptom_precaution, file)"
    ]
   }
  ],
